<resources>
    <string name="app_name">SourceTree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sourcetree</string>
    <string name="nav_header_subtitle">where CS resources found</string>
    <string name="nav_header_desc">Sourcetree</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="learn_programming">Learn Programming</string>
    <string name="start_coding">Start Coding</string>
    <string name="sc">sc</string>
    <string name="web_development">Web Development</string>
    <string name="todo">TODO</string>
    <string name="android_development">Android Development</string>

    <string name="all_courses">All Courses</string>
    <string name="gate_n_gre">GATE N GRE</string>
    <string name="placements">Placements</string>
    <string name="other_useful_sites">Other Useful Sites</string>
    <string name="title_activity_learmprogramming">learmprogramming</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_learnrogramming">learnrogramming</string>
    <string name="title_activity_learn_programming">LearnProgramming</string>

    <string name="c">C</string>
    <string name="cpp">c++</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="data_structures">Data Structures</string>
    <string name="algorithms">Algorithms</string>
    <string name="title_activity_c_lp">c_lp</string>

    <string name="title_activity_start_coding">StartCoding</string>
    <string name="title_activity_all_courses">AllCourses</string>
    <string name="title_activity_greand_gate">GREandGATE</string>
    <string name="title_activity_placements">Placements</string>
    <string name="title_activity_other_useful_sites">OtherUsefulSites</string>
    <string name="title_activity_dc_lp">dc_lp</string>
    <string name="c_c_codeblocks_turbo_c_n_java_netbeans_eclipse_n_python_python_idle_pycharm_ntio_try_it_online_which_supports_400_languages_nvery_useful_intellij_visual_studio_code_visual_studio_for_majority_of_the_languages">C/C++ :- Codeblocks,Turbo c++.  Java :- Netbeans,Eclipse.  Python:- Python IDLE,PyCharm.  TIO :- Try It Online which supports 400+ Languages.  Very Useful Intellij,Visual Studio Code,Visual Studio for majority of the languages.</string>
    <string name="github">Github</string>
    <string name="stackoverflow">StackOverFlow</string>
    <string name="cs50">CS50</string>
    <string name="w3_schools">W3 Schools</string>
    <string name="mit_opencourse_ware">Mit OpenCourse ware</string>
    <string name="linkedin">Linkedin</string>
    <string name="javatpoint">JavaTpoint</string>
    <string name="swayam_nptel">Swayam-NPTEL</string>
    <string name="useful_sites">Useful Sites</string>
    <string name="c4learn">C4Learn</string>
    <string name="codecademy">Codecademy</string>
    <string name="tutorials_point">Tutorials Point</string>

    <string name="sololearn">SoloLearn</string>
    <string name="edx">edX</string>
    <string name="udacity">Udacity</string>
    <string name="udemy">Udemy</string>
    <string name="hackerrank">HackerRank</string>
    <string name="hackerearth">HackerEarth</string>
    <string name="codechef">CodeChef</string>
    <string name="codeforces">CodeForces</string>
    <string name="topcoder">TopCoder</string>
    <string name="coders_calender">Coders Calender</string>
    <string name="different_compliers">Different Compliers</string>
    <string name="tio_try_it_online_which_supports_400_languages">TIO :- Try It Online which supports 400+ Languages.</string>
    <string name="very_useful_intellij_visual_studio_code_visual_studio_for_majority_of_the_languages">Very Useful Intellij,Visual Studio Code,Visual Studio for majority of the languages.</string>
    <string name="python_python_idle_pycharm">Python:- Python IDLE,PyCharm.</string>
    <string name="java_netbeans_eclipse">Java :- Netbeans,Eclipse.</string>
    <string name="c_c_codeblocks_turbo_c">C/C++ :- Codeblocks,Turbo c++.</string>
    <string name="title_activity_different_compliers">DifferentCompliers</string>
    <string name="datascience">DataScience</string>
    <string name="geeksforgeeks">GeeksForGeeks</string>
    <string name="interviewkickstart">InterviewKickstart</string>
    <string name="interviewbit">InterviewBit</string>
    <string name="placements_geeksforgeeks">Placements-GeeksForGeeks</string>
    <string name="indeed">Indeed</string>
    <string name="glassdoor">Glassdoor</string>
    <string name="internshala">Internshala</string>
    <string name="techgig">Techgig</string>
    <string name="title_activity_c">C</string>
    <string name="learnc_org">LearnC.org</string>
    <string name="w3_schools_c">W3 schools--C</string>
    <string name="javatpoint_c">Javatpoint C</string>
    <string name="udemy_c">Udemy C</string>
    <string name="youtube_naresh_it">Youtube -- Naresh it</string>
    <string name="book_let_us_c">Book--Let Us C</string>
    <string name="book_test_your_c_skills">Book -- Test Your C skills</string>
    <string name="coursera_c">Coursera C</string>
    <string name="tutorialpoint_c">Tutorialpoint C</string>
    <string name="title_activity_cplusplus">cplusplus</string>
    <string name="best_books">Best books</string>
    <string name="learncpp_com">Learncpp.com</string>
    <string name="youtube_advanced_c">Youtube_Advanced C++</string>
    <string name="javatpoint_cpp">Javatpoint_c++</string>
    <string name="geeksforgeeks_cpp">Geeksforgeeks_c++</string>
    <string name="tutorialpoint_cpp">Tutorialpoint_c++</string>
    <string name="udemy_cpp">Udemy_c++</string>
    <string name="coursera_cpp">Coursera_c++</string>
    <string name="title_activity_java">Java</string>
    <string name="oracle_tutorials">Oracle Tutorials</string>
    <string name="coursera_java">Coursera_Java</string>
    <string name="youtube_advance_java_by_durgasoft">Youtube_Advance_Java_by_Durgasoft</string>
    <string name="book_by_oracle">Book by Oracle</string>
    <string name="youtube_core_java_by_durgasoft">Youtube_Core_Java_by_Durgasoft</string>
    <string name="javatpoint_java">Javatpoint_Java</string>
    <string name="udemy_java">Udemy_Java</string>
    <string name="geeksforgeeks_java">Geeksforgeeks_Java</string>
    <string name="tutorialpoint_java">Tutorialpoint_Java</string>
    <string name="title_activity_python">Python</string>
    <string name="python_org">Python.org</string>
    <string name="coursera_python">Coursera_Python</string>
    <string name="udemy_python">Udemy_Python</string>
    <string name="youtube_python">Youtube_python</string>
    <string name="youtube_advanced_python">Youtube_Advanced_Python</string>
    <string name="javatpoint_python">Javatpoint_Python</string>
    <string name="tutorialpoint_python">Tutorialpoint_python</string>
    <string name="geeksforgeeks_python">Geeksforgeeks_Python</string>
    <string name="title_activity_data_structures">DataStructures</string>
    <string name="geeksforgeeks_ds">Geeksforgeeks DS</string>
    <string name="coursera_ds">Coursera_DS</string>
    <string name="udemy_ds">Udemy_DS</string>
    <string name="tutorialpoint_ds">Tutorialpoint_DS</string>
    <string name="youtube_advanced_ds">Youtube_Advanced_DS</string>
    <string name="book_by_karumanchi_narasimha">Book by Karumanchi Narasimha</string>
    <string name="geeksforgeeks_advanced_ds">Geeksforgeeks_Advanced DS</string>
    <string name="title_activity_algorithms">Algorithms</string>
    <string name="geeksforgeeks_algo">Geeksforgeeks_Algo</string>
    <string name="coursera_algorithms">Coursera Algorithms</string>
    <string name="youtube_mit">Youtube_MIT</string>
    <string name="youtube_abdul_bari">Youtube_Abdul Bari</string>
    <string name="book_bible_of_algorithms">Book-Bible of Algorithms</string>
    <string name="gate">GATE</string>
    <string name="gateoverflow">GateOverflow</string>
    <string name="previous_year_papers">Previous Year Papers</string>
    <string name="best_gate_books">Best GATE books</string>
    <string name="gre">GRE</string>
    <string name="moogesh">Moogesh</string>
    <string name="greedge">Greedge</string>
    <string name="best_gre_books">Best GRE books</string>
    <string name="galvanize_test_preparation">Galvanize Test Preparation</string>
    <string name="title_activity_android_development">AndroidDevelopment</string>
    <string name="courses">Courses</string>
    <string name="google_developer_training">Google Developer Training</string>
    <string name="reactjs_doc">ReactJS.doc</string>
    <string name="xamarin">Xamarin</string>
    <string name="angular">Angular</string>
    <string name="different_platforms">Different Platforms</string>
    <string name="android_apps">Android Apps</string>
    <string name="react_native">React Native</string>
    <string name="ionic_frameworks">Ionic Frameworks</string>
    <string name="flutter_by_google">Flutter by Google</string>
    <string name="apache_cordava">Apache Cordava</string>
    <string name="virtual_gate">Virtual Gate</string>
    <string name="gatecsce_in">GATECSCE.in</string>
    <string name="react_docs">React Docs</string>
    <string name="title_activity_web_development">WebDevelopment</string>
    <string name="dev_docs">Dev Docs</string>
    <string name="freecodecamp">FreeCodeCamp</string>
    <string name="codepen">Codepen</string>
    <string name="codeacademy">Codeacademy</string>
    <string name="odin_project">Odin Project</string>
    <string name="javascript_libraries">Javascript Libraries</string>
    <string name="react_js">React JS</string>
    <string name="free_templates">Free Templates</string>
    <string name="animation_libraries">Animation Libraries</string>
    <string name="mozilla_documentation">Mozilla Documentation</string>
    <string name="title_activity_data_science">DataScience</string>
    <string name="analytics_vidya">Analytics Vidya</string>
    <string name="kaggle">Kaggle</string>
    <string name="data_science_specialization_course">Data Science Specialization Course</string>
    <string name="refactored">Refactored</string>
    <string name="cognitive_class">Cognitive Class</string>
    <string name="datacamp">DataCamp</string>
    <string name="coursera">Coursera</string>
    <string name="lynda">Lynda</string>
    <string name="channel9">Channel9</string>
    <string name="microsoft_virtual_academy">Microsoft Virtual Academy</string>
    <string name="pluralsight">Pluralsight</string>
    <string name="suggest_us">Suggest US</string>
    <string name="keep_hustling">Keep Hustling!!!</string>
    <string name="leetcode">Leetcode</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="home_second">Home Second</string>
</resources>
