<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AndroidDevelopment"
    tools:showIn="@layout/app_bar_android_development">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:onClick="movec"
        android:orientation="vertical">

        <Button
            android:id="@+id/h_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/courses"
            android:textColor="#0B17F5"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h7_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/google_developer_training"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h2_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/react_docs"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h3_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/xamarin"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h9_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/angular"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h10_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/pluralsight"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h8_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/different_platforms"
            android:textColor="#0B17F5"
            android:textAllCaps="false"
            app:elevation="20dp" />


        <Button
            android:id="@+id/h1_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/android_apps"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h4_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/xamarin"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h5_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"

            android:onClick="movec"
            android:text="@string/react_native"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h6_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/ionic_frameworks"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/h12_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/flutter_by_google"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/h13_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/apache_cordava"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>

