<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GREandGATE"
    tools:showIn="@layout/app_bar_greand_gate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:onClick="movec"
        android:orientation="vertical">

        <Button
            android:id="@+id/h_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/gate"
            android:textColor="#0B17F5"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h7_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/gateoverflow"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h9_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/gatecsce_in"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h2_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/previous_year_papers"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h3_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/best_gate_books"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h8_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/gre"
            android:textColor="#0B17F5"
            android:textAllCaps="false"
            app:elevation="20dp" />


        <Button
            android:id="@+id/h1_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/moogesh"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h4_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/greedge"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h5_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"

            android:onClick="movec"
            android:text="@string/galvanize_test_preparation"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h6_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/best_gre_books"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>

