<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Python"
    tools:showIn="@layout/app_bar_python">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:onClick="movec"
        android:orientation="vertical">

        <Button
            android:id="@+id/h_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/python_org"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h7_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/coursera_python"
            android:textAllCaps="false"
            app:elevation="20dp" />

        <Button
            android:id="@+id/h2_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/udemy_python"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h8_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/tutorialpoint_python"
            android:textAllCaps="false"
            app:elevation="20dp" />


        <Button
            android:id="@+id/h1_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/geeksforgeeks_python"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h6_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/youtube_advanced_python"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h4_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"
            android:onClick="movec"
            android:text="@string/youtube_python"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h5_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_buttons"

            android:onClick="movec"
            android:text="@string/best_books"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>

